# dump-things-server

./: .gitignore  CHANGELOG.md  README.md  atest.py  ccc.py  gentest.py  my.graphql  pyproject.toml  requirements.txt  s.graphql  s.py  s2.py  ss.py  sss.py  their.graphql  ttt.py  x.graphql  x.py  xxx.graphql  xxx.py  y.graphql  y.py  yyy.graphql  yyy.py  z.graphql
.github/workflows/: run_tests.yaml
any_of_test/: dataclass_experiments.py  dataclass_experiments2.py  dataclass_experiments3.py  dataclass_test.py  object_1.json  object_2.json  object_3.json  schema-python.py  schema.yaml  schema2_python_new.py  schema3.yaml  schema3_python_new.py  schema_pydantic.py  schema_pydantic_extended.py  schema_python.py  schema_python_new.py  schema_python_pydantic.py  xxx.py
dump_things_service/: __about__.py  __init__.py  common.py  config.py  conftest.py  convert.py  converter.py  curated.py  dynamic_endpoints.py  export.py  incoming.py  index.py  lazy_list.py  main.py  model.py  persistent_store.py  record.py  resolve_curie.py  shared.py  sql_index.py  start.py  storage.py  token.py  utils.py
dump_things_service/auth/: __init__.py  config.py  forgejo.py
dump_things_service/backends/: __init__.py  filesystem_records.py  interface.py  record_dir.py  record_dir_index.py  schema_type_layer.py  sqlite.py
dump_things_service/commands/: copy_store.py  create_merged_schema.py  rebuild_index.py
dump_things_service/export/: __init__.py  json.py  tree.py
dump_things_service/generators/: dump_things_pythongen.py  gen_pydantic_python.py  generator.py  pythongen.py
dump_things_service/graphql/: graphql_generator.py  main.py  resolvers.py  sdl.py  strawberry_generator.py
dump_things_service/patches/: __init__.py  compile.py  enabled.py  rdflib_loader.py  yamlutils.py
dump_things_service/store/: model_store.py
dump_things_service/tests/: __init__.py  basic.py  create_store.py  fixtures.py  test_auth.py  test_basic.py  test_config.py  test_curated.py  (+18 more)
linkml-test/: info.md  lmc_ttl2yaml.sh  lmc_yaml2ttl.sh  poly1.ttl  poly1.yaml  poly2.ttl  poly3.ttl  poly3.yaml  poly4.ttl  poly4.yaml
schemas/: base-unreleased.yaml  base_unreleased-full.json  base_unreleased-full.yaml
tools/: convert.sh  copy_store.py  patch_linkml  validate.sh
(+4 files in other folders)
